AUT-1057 Code review fixes
