# src/main/java/ee/ria/taraauthserver/authentication/idcard/IdCardLoginController.java
@@ -2,8 +2,10 @@ package ee.ria.taraauthserver.authentication.idcard;
 
 import ee.ria.taraauthserver.config.properties.AuthConfigurationProperties.Ocsp;
 import ee.ria.taraauthserver.error.ErrorCode;
+import ee.ria.taraauthserver.error.exceptions.BadRequestException;
 import ee.ria.taraauthserver.error.exceptions.OCSPServiceNotAvailableException;
 import ee.ria.taraauthserver.error.exceptions.OCSPValidationException;
+import ee.ria.taraauthserver.error.exceptions.ServiceNotAvailableException;
 import ee.ria.taraauthserver.session.SessionUtils;
 import ee.ria.taraauthserver.session.TaraSession;
 import ee.ria.taraauthserver.session.TaraSession.IdCardAuthenticationResult;
@@ -21,11 +23,8 @@ import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import net.logstash.logback.marker.LogstashMarker;
-import org.jetbrains.annotations.NotNull;
-import org.slf4j.MDC;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.MessageSource;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -38,27 +37,18 @@ import java.util.Map;
 
 import static ee.ria.taraauthserver.authentication.idcard.CertificateStatus.REVOKED;
 import static ee.ria.taraauthserver.config.properties.AuthConfigurationProperties.IdCardAuthConfigurationProperties;
-import static ee.ria.taraauthserver.error.ErrorAttributes.ERROR_ATTR_INCIDENT_NR;
-import static ee.ria.taraauthserver.error.ErrorAttributes.ERROR_ATTR_REPORTABLE;
-import static ee.ria.taraauthserver.error.ErrorAttributes.notReportableErrors;
 import static ee.ria.taraauthserver.error.ErrorCode.IDC_CERT_EXPIRED;
 import static ee.ria.taraauthserver.error.ErrorCode.IDC_CERT_NOT_YET_VALID;
 import static ee.ria.taraauthserver.error.ErrorCode.IDC_OCSP_NOT_AVAILABLE;
 import static ee.ria.taraauthserver.error.ErrorCode.IDC_REVOKED;
 import static ee.ria.taraauthserver.error.ErrorCode.IDC_UNKNOWN;
 import static ee.ria.taraauthserver.error.ErrorCode.INVALID_REQUEST;
-import static ee.ria.taraauthserver.security.RequestCorrelationFilter.MDC_ATTRIBUTE_KEY_REQUEST_TRACE_ID;
-import static ee.ria.taraauthserver.session.TaraAuthenticationState.AUTHENTICATION_FAILED;
 import static ee.ria.taraauthserver.session.TaraAuthenticationState.INIT_AUTH_PROCESS;
 import static ee.ria.taraauthserver.session.TaraAuthenticationState.NATURAL_PERSON_AUTHENTICATION_CHECK_ESTEID_CERT;
 import static ee.ria.taraauthserver.session.TaraAuthenticationState.NATURAL_PERSON_AUTHENTICATION_COMPLETED;
 import static ee.ria.taraauthserver.session.TaraSession.TARA_SESSION;
 import static java.util.Map.of;
-import static net.logstash.logback.argument.StructuredArguments.value;
 import static net.logstash.logback.marker.Markers.append;
-import static org.springframework.context.i18n.LocaleContextHolder.getLocale;
-import static org.springframework.http.HttpStatus.BAD_GATEWAY;
-import static org.springframework.http.HttpStatus.BAD_REQUEST;
 
 @Slf4j
 @RestController
@@ -93,17 +83,16 @@ public class IdCardLoginController {
         try {
             nonce = nonceStore.getAndRemove().getBase64EncodedNonce();
         } catch (AuthTokenException e) {
-            return createErrorResponse(taraSession, INVALID_REQUEST, e.getMessage(), BAD_REQUEST);
+            throw new BadRequestException(INVALID_REQUEST, e.getMessage(), e);
         }
         try {
             certificate = authTokenValidator.validate(data.getAuthToken(), nonce);
         } catch (CertificateExpiredException e) {
-            return createErrorResponse(taraSession, IDC_CERT_EXPIRED, "User certificate is expired", BAD_REQUEST);
+            throw new BadRequestException(IDC_CERT_EXPIRED, e.getMessage(), e);
         } catch (CertificateNotYetValidException e) {
-            return createErrorResponse(taraSession, IDC_CERT_NOT_YET_VALID, "User certificate is not yet valid", BAD_REQUEST);
+            throw new BadRequestException(IDC_CERT_NOT_YET_VALID, e.getMessage(), e);
         } catch (AuthTokenException e) {
-            log.error("Auth token validation error", e);
-            return createErrorResponse(taraSession, INVALID_REQUEST, e.getMessage(), BAD_REQUEST);
+            throw new BadRequestException(INVALID_REQUEST, e.getMessage(), e);
         }
         taraSession.setState(NATURAL_PERSON_AUTHENTICATION_CHECK_ESTEID_CERT);
 
@@ -112,11 +101,11 @@ public class IdCardLoginController {
             try {
                 Ocsp validatingOcspConf = ocspValidator.checkCert(certificate);
                 updateAuthenticationResult(taraSession, certificate, validatingOcspConf);
-            } catch (OCSPServiceNotAvailableException ex) {
-                return createErrorResponse(taraSession, IDC_OCSP_NOT_AVAILABLE, "OCSP service is currently not available", BAD_GATEWAY);
-            } catch (OCSPValidationException ex) {
-                ErrorCode errorCode = ex.getStatus() == REVOKED ? IDC_REVOKED : IDC_UNKNOWN;
-                return createErrorResponse(taraSession, errorCode, ex.getMessage(), BAD_REQUEST);
+            } catch (OCSPServiceNotAvailableException e) {
+                throw new ServiceNotAvailableException(IDC_OCSP_NOT_AVAILABLE, e.getMessage(), e);
+            } catch (OCSPValidationException e) {
+                ErrorCode errorCode = e.getStatus() == REVOKED ? IDC_REVOKED : IDC_UNKNOWN;
+                throw new BadRequestException(errorCode, e.getMessage(), e);
             }
         } else {
             log.info("Skipping OCSP validation because OCSP is disabled.");
@@ -137,20 +126,6 @@ public class IdCardLoginController {
                 .and(append("tara.webeid.auth_token.algorithm", authToken.getAlgorithm()))
                 .and(append("tara.webeid.auth_token.format", authToken.getFormat()));
         log.info(marker, "Client-side Web eID operation successful");
-    }
-
-    @NotNull
-    private ResponseEntity<Map<String, Object>> createErrorResponse(TaraSession taraSession, ErrorCode errorCode, String logMessage, HttpStatus httpStatus) { // TODO AUT-855
-        log.warn(append("error.code", errorCode.name()), "Validation failed: {}", value("error.message", logMessage));
-        taraSession.setState(AUTHENTICATION_FAILED);
-        taraSession.getAuthenticationResult().setErrorCode(errorCode);
-        String errorMessage = messageSource.getMessage(errorCode.getMessage(), null, getLocale());
-        Boolean reportable = !notReportableErrors.contains(errorCode);
-        return ResponseEntity.status(httpStatus).body(of(
-                "status", "ERROR",
-                "message", errorMessage,
-                ERROR_ATTR_INCIDENT_NR, MDC.get(MDC_ATTRIBUTE_KEY_REQUEST_TRACE_ID),
-                ERROR_ATTR_REPORTABLE, reportable));
     }
 
     private void updateAuthenticationResult(TaraSession taraSession, X509Certificate certificate, Ocsp validatingOcspConf) {
